@@ -374,7 +374,7 @@ class TestMergeDirectiveBranch(object):
 
     def test_disk_name(self):
         tree_a, tree_b, branch_c = self.make_trees()
-        tree_a.branch.nick = 'fancy-name'
+        tree_a.branch.nick = 'fancy <name>'
         md = self.from_objects(tree_a.branch.repository, 'rev2a', 500, 120,
             tree_b.branch.base)
         self.assertEqual('fancy-name-2', md.get_disk_name(tree_a.branch))
